[tool.poetry]
name = "gslretro"
version = "0.7.13"
description = "Graph-based self-learning retrosythesis"
authors = ["Laboratoire de Chemoinformatique <tagirshin@gmail.com>"]
license = "MIT"
readme = "README.rst"
packages = [
    { include = "GSLRetro", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
CGRtools = "^4.1.35"
py-mini-racer = ">=0.6"
pandas = ">=1.4"
toytree = ">=2.0"
ray = ">=2.0"
click = ">=8.0.0"
StructureFingerprint = "^2.1"
altair = ">=4.2.0"
altair-saver = ">=0.5.0"
ipykernel = ">=6.0"
"epam.indigo" = "^1.9.0"
werkzeug = ">2.0"
gdown = "2.3.1"
ipywidgets = "8.0.6"

[tool.poetry.group.cpu]
optional = true

[tool.poetry.group.cpu.dependencies]
adabelief-pytorch = ">=0.2.1"
torch = ">=1.13,<1.14"
torch-geometric = ">=2.2.0"
pytorch-lightning = ">=1.9,<2"
torch-scatter = [{markers = "sys_platform == 'linux'", url="https://data.pyg.org/whl/torch-1.13.0%2Bcpu/torch_scatter-2.1.0%2Bpt113cpu-cp310-cp310-linux_x86_64.whl"}]
torch-sparse = [{markers = "sys_platform == 'linux'", url="https://data.pyg.org/whl/torch-1.13.0%2Bcpu/torch_sparse-0.6.16%2Bpt113cpu-cp310-cp310-linux_x86_64.whl"}]
torch-spline-conv = [{markers = "sys_platform == 'linux'", url="https://data.pyg.org/whl/torch-1.13.0%2Bcpu/torch_spline_conv-1.2.1%2Bpt113cpu-cp310-cp310-linux_x86_64.whl"}]
torch-cluster = [{markers = "sys_platform == 'linux'", url="https://data.pyg.org/whl/torch-1.13.0%2Bcpu/torch_cluster-1.6.0%2Bpt113cpu-cp310-cp310-linux_x86_64.whl"}]
pyg-lib = [{markers = "sys_platform == 'linux'", url="https://data.pyg.org/whl/torch-1.13.0%2Bcpu/pyg_lib-0.1.0+pt113cpu-cp310-cp310-linux_x86_64.whl"}]

[tool.poetry.scripts]
gslretro_download_data = "GSLRetro.interfaces.cli:download_data_cli"
gslretro_planning_config = "GSLRetro.interfaces.cli:planning_config_cli"
gslretro_training_config = "GSLRetro.interfaces.cli:training_config_cli"
gslretro_tree_search = "GSLRetro.interfaces.cli:tree_search_cli"
gslretro_extract_rules = "GSLRetro.interfaces.cli:extract_rules_cli"
gslretro_policy_training = "GSLRetro.interfaces.cli:policy_training_cli"
gslretro_self_learning = "GSLRetro.interfaces.cli:self_learning_cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
