[tool.poetry]
name = "syntool"
version = "0.9.0"
description = "Chemocal synthesis planning tool"
authors = ["Laboratoire de Chemoinformatique <tagirshin@gmail.com>"]
license = "MIT"
readme = "README.rst"
packages = [
    { include = "Syntool", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
CGRtools = "^4.1.35"
py-mini-racer = ">=0.6"
pandas = ">=1.4"
toytree = ">=2.0"
ray = ">=2.0"
click = ">=8.0.0"
StructureFingerprint = "^2.1"
werkzeug = ">2.0"
gdown = "4.7.1"
ordered-set = "4.1.0"

[tool.poetry.group.cpu]
optional = true

[tool.poetry.group.cpu.dependencies]
adabelief-pytorch = ">=0.2.1"
torch = ">=1.13,<1.14"
torch-geometric = "2.4.0"
pytorch-lightning = ">=1.9,<2"
torch-scatter = [{markers = "sys_platform == 'linux'", url="https://data.pyg.org/whl/torch-1.13.0%2Bcpu/torch_scatter-2.1.0%2Bpt113cpu-cp310-cp310-linux_x86_64.whl"}]
torch-sparse = [{markers = "sys_platform == 'linux'", url="https://data.pyg.org/whl/torch-1.13.0%2Bcpu/torch_sparse-0.6.16%2Bpt113cpu-cp310-cp310-linux_x86_64.whl"}]
torch-spline-conv = [{markers = "sys_platform == 'linux'", url="https://data.pyg.org/whl/torch-1.13.0%2Bcpu/torch_spline_conv-1.2.1%2Bpt113cpu-cp310-cp310-linux_x86_64.whl"}]
torch-cluster = [{markers = "sys_platform == 'linux'", url="https://data.pyg.org/whl/torch-1.13.0%2Bcpu/torch_cluster-1.6.0%2Bpt113cpu-cp310-cp310-linux_x86_64.whl"}]
pyg-lib = [{markers = "sys_platform == 'linux'", url="https://data.pyg.org/whl/torch-1.13.0%2Bcpu/pyg_lib-0.1.0+pt113cpu-cp310-cp310-linux_x86_64.whl"}]

[tool.poetry.scripts]
syntool_planning_data = "Syntool.interfaces.cli:download_planning_data_cli"
syntool_training_data = "Syntool.interfaces.cli:download_training_data_cli"
syntool_planning = "Syntool.interfaces.cli:syntool_planning_cli"
syntool_training = "Syntool.interfaces.cli:syntool_training_cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
